--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/_ViewImports.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿﻿@using ProyectoNominaINTBII
+﻿@using ProyectoNominaINTBII
 @using ProyectoNominaINTBII.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
