--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Shared/_Layout.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Shared/_Layout.cshtml
@@ -56,6 +56,7 @@
                             <li><a href="@Url.Action("ListUsers", "Admin", new { id = 1 })"><i class="fas fa-user icon-left"></i> Ver Usuario</a></li>
                             <li><a href="@Url.Action("EditAllUsersInfo", "Admin", new { id = 1 })"><i class="fas fa-edit icon-left"></i> Editar Información de Usuarios</a></li>
                             <li><a href="@Url.Action("CompanyInfo", "Admin")"><i class="fas fa-building icon-left"></i> Información de la Empresa</a></li>
+                            <li><a href="@Url.Action("AreaGeograficas")"><i class="fas fa-building icon-left"></i>AreasGeograficas</a></li>
                         </ul>
                     </li>
                     <li>
