--- a/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Nomina/Index.cshtml
+++ b/ProyectoNominaINTBII/ProyectoNominaINTBII/Views/Nomina/Index.cshtml
@@ -1,14 +1,14 @@
 ﻿@model IEnumerable<ProyectoNominaINTBII.Models.Nomina>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Nomina";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>Nomina</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Crear Nomina</a>
 </p>
 <table class="table">
     <thead>
@@ -29,15 +29,6 @@
                 Fecha Pago
             </th>
             <th>
-                Es extraordinaria
-            </th>
-            <th>
-               Concepto Nomina
-            </th>
-            <th>
-                Concepto Timbrado
-            </th>
-            <th>
                 Total Trabajadores
             </th>
             <th>
@@ -45,9 +36,6 @@
             </th>
             <th>
                 Total Deducciones
-            </th>
-            <th>
-                Es extraordinaria
             </th>
             <th>
                Generada
@@ -61,19 +49,7 @@
             <th>
                 Cerrada
             </th>
-            <th>
-                Estatus
-            </th>
-            <th>
-                Empresa
-            </th>
-            <th>
-                Periocidad Pago
-            </th>
-            <th>
-               Tipo Contrato
-            </th>
-            <th></th>
+            <th>Controles</th>
         </tr>
     </thead>
     <tbody>
@@ -95,25 +71,13 @@
                 @Html.DisplayFor(modelItem => item.FechaPago)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.NominaExtraordinariaId)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ConceptoNomina)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ConceptoTimbrado)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.TotalTrabajadores)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TotalPercepciones)
+                $@Html.DisplayFor(modelItem => item.TotalPercepciones)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.TotalDeducciones)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Extraordinaria)
+                $@Html.DisplayFor(modelItem => item.TotalDeducciones)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Generada)
@@ -128,21 +92,9 @@
                 @Html.DisplayFor(modelItem => item.Cerrada)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Estatus)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Empresa.Nombre)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SatPeriocidadPago.DescripcionSat)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.SatTipoContrato.Descripcion)
-            </td>
-            <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Detalles</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Eliminar</a>
             </td>
         </tr>
 }
